--- a/uploadfile/upload.html
+++ b/uploadfile/upload.html
@@ -10,8 +10,8 @@
       method="post"
       enctype="multipart/form-data">
       <p>
-          <input type="file" name="file"/>
-          <input type="submit" value="upload"/>
+          <input type="file" name="file">
+          <input type="submit" value="upload">
       </p>
 </form>
 
